--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".controller.loginPage"
+            android:theme="@style/Theme.Pant"
             android:exported="false" />
         <activity
             android:name=".controller.MainActivity"
