--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".controller.loginPage"
-            android:theme="@style/Theme.Pant"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".controller.MainActivity"
