--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pant"
         tools:targetApi="31">
+        <activity
+            android:name=".controller.ClientActivity"
+            android:exported="false" />
         <activity
             android:name=".controller.takeAppoint"
             android:exported="false" />
