--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Pant"
         tools:targetApi="31">
         <activity
+            android:name=".controller.makeReport"
+            android:exported="false" />
+        <activity
             android:name=".controller.listTeam"
             android:exported="false" />
         <activity
